# CMake-Ninja-Cpp-Build-System-VSCode

./: .gitignore  CMakeLists.txt  README.md
include/: animal.h  cat.h  dog.h
src/: animal.cpp  cat.cpp  dog.cpp  main.cpp
